--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 
 
               <h2 class="text-white-50 mx-auto mt-2 mb-5">Mutuelle Santé Sénégal</h2>
-              <form th:action="@{/login}" method="post">
+              <form th:action="@{/connexion}" method="post">
                 <!-- Affichage des messages d'erreur -->
                 <div th:if="${param.error}" class="alert alert-danger" role="alert">
                   Identifiants incorrects
