Realisation fonctionnalité ajout administrateur Creation de l'espace admin et creation de la vue demande de remboursement.html

--- a/src/main/resources/templates/mutuelle.html
+++ b/src/main/resources/templates/mutuelle.html
@@ -27,11 +27,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" th:href="@{/home(id=${user.user_id})}">home</a></li>
+                <li class="nav-item"><a class="nav-link " th:href="@{/home(id=${user.user_id})}">home</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/remboursement(id=${user.user_id})}">Remboursement</a></li>
                 <li class="nav-item"><a class="nav-link" href="#projects">Demandes</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Mutuelle</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#projects">Mutuelle</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/utilisateurs(id=${user.user_id})}">Utilisateurs</a></li>
+
+
             </ul>
         </div>
         <div  class="collapse navbar-collapse">
