--- a/src/main/resources/templates/demande.html
+++ b/src/main/resources/templates/demande.html
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand text-bold" >Mutuelle Santé</a>
-        <a th:text="${user.role.roleName.toString()+' '+user.prenom+' '+user.nom} " class="navbar-brand text-bold"></a>
+        <a th:text="${user.role.roleName.toString()+' '+user.nom} " class="navbar-brand text-bold"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
@@ -28,8 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link " th:href="@{/home(id=${user.user_id})}">home</a></li>
-                <li class="nav-item"><a class="nav-link active" th:href="@{/remboursement(id=${user.user_id})}">Remboursement</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Liste des Demande</a></li>
+                <li class="nav-item"><a class="nav-link " th:href="@{/remboursement(id=${user.user_id})}">Remboursement</a></li>
+                <li class="nav-item"><a class="nav-link active " href="#projects">Demandes</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Mutuelle</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/utilisateurs(id=${user.user_id})}">Utilisateurs</a></li>
 
             </ul>
         </div>
