--- a/src/main/resources/templates/mutuelle.html
+++ b/src/main/resources/templates/mutuelle.html
@@ -30,8 +30,8 @@
                 <li class="nav-item"><a class="nav-link " th:href="@{/home(id=${user.user_id})}">home</a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/remboursement(id=${user.user_id})}">Remboursement</a></li>
                 <li class="nav-item"><a class="nav-link" href="#projects">Demandes</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#projects">Mutuelle</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/utilisateurs(id=${user.user_id})}">Utilisateurs</a></li>
+                <li class="nav-item"><a class="nav-link active" th:href="@{/mutuelle(id=${user.user_id})}" >Mutuelle</a></li>
+                <li class="nav-item"><a class="nav-link " th:href="@{/utilisateurs(id=${user.user_id})}">Utilisateurs</a></li>
 
 
             </ul>
@@ -48,13 +48,98 @@
     <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
         <div class="d-flex justify-content-center">
             <div class="text-center">
-                <h1 class="mx-auto my-0 text-uppercase">Mutuelle Santé</h1>
-                <h2 class="text-white-50 mx-auto mt-2 mb-5">Une application web de gestion des demandes de remboursements des mutuelles de santé.</h2>
-                <a class="btn btn-primary" href="#about">Get Started</a>
+                <h1 class="mx-auto my-0 text-uppercase">Mutuelle</h1>
+                <h2 class="text-white-50 mx-auto mt-2 mb-5">Ici vous pouvez creer une mutuelle ainsi que lui ajouter des patients et autre utilisateur.</h2>
+                <a class="btn btn-primary" href="#addmutuelle">Creer Mutuelle</a>
+                <a class="btn btn-primary" href="#listmutuelle">Lister Mutuelle</a>
             </div>
         </div>
     </div>
 </header>
+
+<!-- Ajouter Mutuelle-->
+<section class="about-section text-center" id="addmutuelle" >
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-lg-8">
+                <h2 class="text-white mb-4">Ajouter une Mutuelle</h2>
+                <p class="text-white-50">
+                    Veuillez rentrez les informations de l'utilisateur
+                </p>
+                <form th:action="@{/mutuelle}" method="post">
+
+                    <div class="mb-3">
+                        <input type="text" th:name="nom" class="form-control" placeholder="nom" required />
+                    </div>
+                    <div class="mb-3">
+                        <input type="text" th:name="prenom" class="form-control" placeholder="prenom" required />
+                    </div>
+                    <div class="mb-3">
+                        <input type="text" th:name="username" class="form-control" placeholder="Nom d'utilisateur" required />
+                    </div>
+                    <div class="mb-3">
+                        <input type="text" th:name="nom_assurance" class="form-control" placeholder="nom assurance" required />
+                    </div>
+                    <div class="mb-3">
+                        <input type="text" th:name="email" class="form-control" placeholder="exemple@gmail.com" required />
+                    </div>
+                    <div class="mb-3">
+                        <input type="password" th:name="password" class="form-control" placeholder="Password" required />
+                    </div>
+
+                    <div class="mb-3">
+                        <input type="hidden" th:name="id" th:value="${user.user_id}" >
+                        <select th:name="role_id" class="form-select" >
+                            <option  th:each="va:${listeroles}" th:value="${va.id}" th:text="${va.roleName}"  ></option>
+                        </select>
+                    </div>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary">Enregistrer</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+        <img class="img-fluid" src="../static/assets/img/ipad.png" alt="..." />
+    </div>
+</section>
+<!--Lister mutuelle-->
+<section class="about-section text-center" id="listmutuelle" >
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-lg-8">
+                <h2 class="text-white mb-4">Lister les mutuelles</h2>
+                <p class="text-white-50">
+                    Voici la liste des mutuelles
+                </p>
+                <div class="card mt-2" >
+                    <div class="card-header" >
+                        <h5>Liste des Sessions d'un Cours </h5>
+                    </div>
+                    <div class="card-body" >
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        nom mutuelle
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="mu:${listemutuelle}" >
+                                    <td th:text="${mu.nom_assurance}" ></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img class="img-fluid" src="../static/assets/img/ipad.png" alt="..." />
+    </div>
+</section>
+<!--Lister Mutuelle-->
+
 
 <!-- Footer-->
 <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Mutuelle Sante 2023</div></footer>
